# adw-network

./: .gitignore  Cargo.toml  README.md  com.github.adw-network.json
adw-network-bin/: .SRCINFO  PKGBUILD
adwaita-network-bin/: PKGBUILD
data/: com.github.adw-network.desktop  com.github.adw-network.policy
docs/: REPORT.md
src/: config.rs  hotspot.rs  hotspot_runtime.rs  leases.rs  lib.rs  main.rs  models.rs  modem_manager.rs  nm.rs  nm_dbus.rs  profiles.rs  qr.rs  qr_dialog.rs  secrets.rs  state.rs  window.rs
src/ui/: common.rs  devices_page.rs  ethernet_page.rs  hotspot_page.rs  mod.rs  profiles_page.rs  wifi_page.rs
src/ui/hotspot_page/: actions.rs  mod.rs  password.rs
src/ui/wifi_page/: actions.rs  details.rs  dialogs.rs  mod.rs
