[package]
name = "adwaita-network"
version = "1.0.0"
edition = "2021"
description = "Modern network management application for GNOME"
license = "GPL-3.0-or-later"
repository = "https://github.com/PlayRood32/adw-network"
homepage = "https://github.com/PlayRood32/adw-network"
authors = ["PlayRood"]

[dependencies]
gtk4 = { version = "0.11.2", features = ["v4_10"] }
libadwaita = { version = "0.9.1", features = ["v1_6"] }
gdk-pixbuf = "0.22.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
glib = "0.22.5"
gio = "0.22.5"
tokio = { version = "1.51.1", features = ["full", "process"] }
anyhow = "1.0.101"
rand = "0.10.1"
qrcode = { version = "0.14.1", features = ["image"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11.10"
chrono = "0.4.44"
tempfile = "3.27.0"
hostname = "0.4.2"
keyring = "3.6.3"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }
zvariant = "5.9.2"
dns-lookup = "3.0.1"

[dev-dependencies]
async-trait = "0.1.89"
tokio-test = "0.4.5"

[features]
default = []
plain-json-debug = []   # development only

[lib]
name = "adwaita_network"
path = "src/lib.rs"

[[bin]]
name = "adwaita-network"
path = "src/main.rs"